adding all files

--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,4 +1,3 @@
-# Build Next.js
 FROM node:18-alpine AS builder
 
 WORKDIR /app
@@ -7,10 +6,10 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
+
 RUN npm run build
 
-# Servir con Next.js standalone
-FROM node:18-alpine
+FROM node:18-alpine AS runner
 
 WORKDIR /app
 
