--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -16,26 +16,26 @@ jobs:
 
     steps:
 
-      # Checkout del repositorio
+
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      # Login en Azure
+
       - name: Azure Login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Login en ACR
+
       - name: ACR Login
         run: |
           az acr login --name $ACR_NAME
 
-      # Habilitar Docker Buildx (soporte multi-plataforma)
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Build & Push Backend Image
+
       - name: Build & Push Backend Image
         uses: docker/build-push-action@v4
         with:
@@ -45,7 +45,7 @@ jobs:
             ${{ env.ACR_LOGIN_SERVER }}/backend:latest
           platforms: linux/amd64,linux/arm64
 
-      # Build & Push Frontend Image
+
       - name: Build & Push Frontend Image
         uses: docker/build-push-action@v4
         with:
@@ -61,17 +61,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-      # Checkout repo
-      - uses: actions/checkout@v3
-
-      # Azure Login
+      - name: Checkout repo
+        uses: actions/checkout@v3
       - name: Azure Login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      # Obtener credenciales del AKS
+          
       - name: Get AKS Credentials
         run: |
           az aks get-credentials \
@@ -79,23 +75,22 @@ jobs:
             --name knaval-aks \
             --overwrite-existing
 
-      # Aplicar todos los manifiestos del proyecto
-      - name: Apply Backend / Frontend / Database / Ingress
+      - name: Apply Backend / Frontend / DB / Ingress
         run: |
           kubectl apply -f k8s/backend/
           kubectl apply -f k8s/frontend/
           kubectl apply -f k8s/database/
           kubectl apply -f k8s/ingress/
- 
-      # MONITORIZACIÓN (Prometheus + Grafana) — OPCIONAL
-      # Descomentar si quieres desplegar el stack también aquí.
-      #
+
+      # ------------ OPTIONAL: Monitoring Stack ------------
       # - name: Apply Monitoring (Optional)
       #   run: |
       #     kubectl apply -f k8s/monitoring/
+      # ----------------------------------------------------
 
-      # Esperar a que los deployments arranquen correctamente
-      - name: Wait for Deployments
+      - name: Force restart deployments to pull new images
         run: |
+          kubectl rollout restart deployment/backend-deployment -n knaval
+          kubectl rollout restart deployment/frontend-deployment -n knaval
           kubectl rollout status deployment/backend-deployment -n knaval --timeout=90s
           kubectl rollout status deployment/frontend-deployment -n knaval --timeout=90s
