--- a/k8s/database/mongo-deployment.yaml
+++ b/k8s/database/mongo-deployment.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: mongo
           image: mongo:6
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 27017
           env:
