--- a/k8s/backend/deployment.yaml
+++ b/k8s/backend/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: knaval
 
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: backend
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: kennyacr1.azurecr.io/backend:latest
+          image: kennyacr1.azurecr.io/backend:test123
           imagePullPolicy: Always
           ports:
             - containerPort: 3001
