--- a/k8s/backend/deployment.yaml
+++ b/k8s/backend/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: kennyacr1.azurecr.io/backend:v1
+          image: kennyacr1.azurecr.io/backend:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 3001
